# SwissAppartmentAnalyzer

./: .env  apartment_filter.py  config.py  image_analyzer.py  main.py  pyproject.toml  requirements.txt
models/: apartment_models.py  scraper.py
output/: apartments_basic.csv  apartments_details.json  filtered_apartments.csv
output_old/: apartments_basic.csv  appartments_details.json  filtered_apartments.csv
scrapers/: flatfox_scraper.py  immoscout24_scraper.py
tasks/: analyze_listings.py  detail_scraping.py  filter_listings.py  overview_scraping.py
ui/: apartment_browser.py  requirements.txt
